fix some gulp config && add first part of scss structure

--- a/src/index.html
+++ b/src/index.html
@@ -11,16 +11,31 @@
     <!-- <link href="https://fonts.googleapis.com/css?family=Lato:100,300,400,700,900" rel="stylesheet"> -->
 
     <!-- <link rel="stylesheet" href="css/icon-font.css"> -->
-    <link rel="stylesheet" href="css/style.css">
+    <link rel="stylesheet" href="css/main.css">
     <link rel="shortcut icon" type="image/png" href="img/favicon.png">
 
     <title>Jean-Baptiste Stephan Intégrateur Web</title>
 </head>
 
 <body>
-    <p class="wait">
-        New website coming soon
-    </p>
+    <h1>Test</h1>
+    <div class="test-darkmode"></div>
+    <div class="line_container">
+        <div class="line line_active grid_active"></div>
+        <div class="line line1 middle_line_js grid_active"></div>
+        <div class="line line2 middle_line_js grid_active"></div>
+        <div class="line line3 middle_line_js grid_active"></div>
+        <div class="line line4 middle_line_js grid_active"></div>
+        <div class="line line5 middle_line_js grid_active"></div>
+        <div class="line line6 middle_line_js grid_active"></div>
+        <div class="line line7 middle_line_js grid_active"></div>
+        <div class="line line8 middle_line_js grid_active"></div>
+        <div class="line line9 middle_line_js grid_active"></div>
+        <div class="line line10 middle_line_js grid_active"></div>
+        <div class="line line11 middle_line_js grid_active"></div>
+        <div class="line line12 middle_line_js grid_active"></div>
+        <div class="line line_active grid_active"></div>
+    </div>
 
 </body>
 
