add intro section

--- a/src/index.html
+++ b/src/index.html
@@ -1,82 +1,151 @@
 <!DOCTYPE html>
 <html lang="fr">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta name="description" content="Portfolio intéractif " />
+    <meta name="keyword" content="Intégrateur Css3 Html5 JavaScript" />
 
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="description" content="Portfolio intéractif ">
-    <meta name="keyword" content="Intégrateur Css3 Html5 JavaScript">
-
-    <link rel="stylesheet" href="css/main.css">
-    <link rel="shortcut icon" type="image/png" href="img/favicon.png">
+    <link rel="stylesheet" href="css/main.css" />
+    <link rel="shortcut icon" type="image/png" href="img/favicon.png" />
 
     <title>Jean-Baptiste Stephan Creative developer</title>
-</head>
+  </head>
 
-<body>
+  <body>
     <header class="hero hero--default">
-        <section class="hero__pick-up">
-            <h1><span class="hero__pick-up-firstline">  Creative <span class="u-f-regular">Fullstack</span> </span> <span class="hero__pick-up-secondline" >Developpeur</span> </h1>
-        </section>
-        <section class="hero__names">
-            <p><span class="hero__names--nobg">Jean-Baptiste</span><span class="hero__names--dark" lang="ja-jp" >ステファン</span></p>
-            <p><span class="hero__names--dark" lang="ja-jp">ジーン・バプティスト</span><span class="hero__names--nobg">Stephan</span></p>
-        </section>
+      <section class="hero__pick-up">
+        <h1>
+          <span class="hero__pick-up-firstline">
+            Creative <span class="u-f-regular">Fullstack</span>
+          </span>
+          <span class="hero__pick-up-secondline">Developpeur</span>
+        </h1>
+      </section>
+      <section class="hero__names">
+        <p>
+          <span class="hero__names--nobg">Jean-Baptiste</span
+          ><span class="hero__names--dark" lang="ja-jp">ステファン</span>
+        </p>
+        <p>
+          <span class="hero__names--dark" lang="ja-jp"
+            >ジーン・バプティスト</span
+          ><span class="hero__names--nobg">Stephan</span>
+        </p>
+      </section>
     </header>
     <div class="navigation navigation--mobile">
-        <input class="navigation__checkbox" type="checkbox" name="nav-toggle" id="nav-toggle">
-        <label class="navigation__button" for="nav-toggle">
-           <span class="navigation__icon">
-               &nbsp;
-           </span>
-        </label>
-        <div class="navigation__background">&nbsp;</div>
-        <nav class="navigation__nav" role="navigation" aria-label="mobile">
-            <ul class="navigation__list">
-                <li class="navigation__item" > <a class="navigation__link" href="#">About me</a></li>
-                <li class="navigation__item" > <a class="navigation__link" href="#">Case study</a></li>
-                <li class="navigation__item" > <a class="navigation__link" href="#">Blog</a></li>
-                <li class="navigation__item" > <a class="navigation__link" href="#">Contact</a></li>
-            </ul>
-        </nav>
+      <input
+        class="navigation__checkbox"
+        type="checkbox"
+        name="nav-toggle"
+        id="nav-toggle"
+      />
+      <label class="navigation__button" for="nav-toggle">
+        <span class="navigation__icon"> &nbsp; </span>
+      </label>
+      <div class="navigation__background">&nbsp;</div>
+      <nav class="navigation__nav" role="navigation" aria-label="mobile">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a class="navigation__link" href="#">About me</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="#">Case study</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="#">Blog</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="#">Contact</a>
+          </li>
+        </ul>
+      </nav>
     </div>
     <div class="navigation navigation--desktop">
-        <nav class="navigation__nav" role="navigation" aria-label="main">
-            <ul class="navigation__list">
-                <li class="navigation__item" > <a class="navigation__link" href="#">About me</a></li>
-                <li class="navigation__item" > <a class="navigation__link" href="#">Case study</a></li>
-                <li class="navigation__item" > <a class="navigation__link" href="#">Blog</a></li>
-                <li class="navigation__item" > <a class="navigation__link" href="#">Contact</a></li>
-            </ul>
-        </nav>
-    </div>
-    <nav class="quick-link" role="navigation" aria-label="shortcut">
-        <ul class="quick-link__container">
-            <li class="quick-link__item"><a href="#"><i></i><span>Work</span></a></li>
-            <li class="quick-link__item"><a href="#"><i></i><span>Resume</span></a></li>
-            <li class="quick-link__item"><a href="#"><i></i><span>Contact</span></a></li>
+      <nav class="navigation__nav" role="navigation" aria-label="main">
+        <ul class="navigation__list">
+          <li class="navigation__item">
+            <a class="navigation__link" href="#">About me</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="#">Case study</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="#">Blog</a>
+          </li>
+          <li class="navigation__item">
+            <a class="navigation__link" href="#">Contact</a>
+          </li>
         </ul>
-    </nav>
+      </nav>
+    </div>
+    <!-- <nav class="quick-link" role="navigation" aria-label="shortcut">
+      <ul class="quick-link__container">
+        <li class="quick-link__item">
+          <a href="#"><i></i><span>Work</span></a>
+        </li>
+        <li class="quick-link__item">
+          <a href="#"><i></i><span>Resume</span></a>
+        </li>
+        <li class="quick-link__item">
+          <a href="#"><i></i><span>Contact</span></a>
+        </li>
+      </ul>
+    </nav> -->
     <div class="line_container">
-        <div class="line line_active grid_active"></div>
-        <div class="line line1 middle_line_js grid_active"></div>
-        <div class="line line2 middle_line_js grid_active"></div>
-        <div class="line line3 middle_line_js grid_active"></div>
-        <div class="line line4 middle_line_js grid_active"></div>
-        <div class="line line5 middle_line_js grid_active"></div>
-        <div class="line line6 middle_line_js grid_active"></div>
-        <div class="line line7 middle_line_js grid_active"></div>
-        <div class="line line8 middle_line_js grid_active"></div>
-        <div class="line line9 middle_line_js grid_active"></div>
-        <div class="line line10 middle_line_js grid_active"></div>
-        <div class="line line11 middle_line_js grid_active"></div>
-        <div class="line line12 middle_line_js grid_active"></div>
-        <div class="line line_active grid_active"></div>
+      <div class="line line_active grid_active"></div>
+      <div class="line line1 middle_line_js grid_active"></div>
+      <div class="line line2 middle_line_js grid_active"></div>
+      <div class="line line3 middle_line_js grid_active"></div>
+      <div class="line line4 middle_line_js grid_active"></div>
+      <div class="line line5 middle_line_js grid_active"></div>
+      <div class="line line6 middle_line_js grid_active"></div>
+      <div class="line line7 middle_line_js grid_active"></div>
+      <div class="line line8 middle_line_js grid_active"></div>
+      <div class="line line9 middle_line_js grid_active"></div>
+      <div class="line line10 middle_line_js grid_active"></div>
+      <div class="line line11 middle_line_js grid_active"></div>
+      <div class="line line12 middle_line_js grid_active"></div>
+      <div class="line line_active grid_active"></div>
     </div>
     <main>
-        Content
+      <section class="intro">
+        <header>
+          <span class="intro__title-label">Hello There !</span>
+          <h2 class="intro__title">
+            I am here to help you to build solution who fits your needs.
+          </h2>
+        </header>
+        <p class="intro__text">
+          Passionné par le Web, les nouvelles technologies, et avide de
+          connaissance. J'ai suivi un parcours polyvalent dans les métiers du
+          web, j'ai donc pu acquérir au fil de mon parcours scolaire et de mon
+          autoformation différentes compétences en création et en développement
+          web (Vue.js, React.js, PHP, SCSS, ...).📝 Voici à titre d'exemple ce
+          que je pourrais vous apporter : 🔹 Intégration de site web compatible
+          RGAA 🔹 Création de thème WordPress
+        </p>
+        <footer class="intro__btns-container">
+          <a
+            name="intro__btn-resume"
+            id="intro__btn-resume"
+            class="btn btn-primary"
+            href="#"
+            role="button"
+            >My resume</a
+          >
+          <a
+            name="intro__btn-knowmore"
+            id="intro__btn-knowmore"
+            class="btn btn-primary"
+            href="#"
+            role="button"
+            >Know more</a
+          >
+        </footer>
+      </section>
     </main>
-</body>
-
+  </body>
 </html>
