add the css when multiple case study && fix svg width

--- a/src/index.html
+++ b/src/index.html
@@ -147,26 +147,66 @@
         </footer>
       </section>
       <section class="case-study">
-          <h2 class="title-section">Case study</h2>
-          <ol class="case-study__list">
-            <li class="case-study__item" >
-                <article class="case-study__item-article">
-                    <header>
-                        <h3 class="case-study__item-header" >
-                            <svg xmlns="http://www.w3.org/2000/svg" >
-                               <text x="0" y="1em">
-                                   Case
-                               </text>
-                            </svg>
-                            <span>study</span>
-                        </h3>
-                            
-                        <div class="case-study__item-position">rôle</div>
-                    </header>
-                    <img class="case-study__item-img" src="./assets/imgs/Case-study.png" alt="case-study">
-                </article>
-            </li>
-          </ol>
+        <h2 class="title-section">Case study</h2>
+        <ol class="case-study__list">
+          <li class="case-study__item">
+            <article class="case-study__item-article">
+              <header>
+                <h3 class="case-study__item-header">
+                  <svg xmlns="http://www.w3.org/2000/svg">
+                    <text x="0" y="1em">Case</text>
+                  </svg>
+                  <span>study</span>
+                </h3>
+
+                <div class="case-study__item-position">rôle</div>
+              </header>
+              <img
+                class="case-study__item-img"
+                src="./assets/imgs/Case-study.png"
+                alt="case-study"
+              />
+            </article>
+          </li>
+          <li class="case-study__item">
+            <article class="case-study__item-article">
+              <header>
+                <h3 class="case-study__item-header">
+                  <svg xmlns="http://www.w3.org/2000/svg">
+                    <text x="0" y="1em">Case</text>
+                  </svg>
+                  <span>study</span>
+                </h3>
+
+                <div class="case-study__item-position">rôle</div>
+              </header>
+              <img
+                class="case-study__item-img"
+                src="./assets/imgs/Case-study.png"
+                alt="case-study"
+              />
+            </article>
+          </li>
+          <li class="case-study__item">
+            <article class="case-study__item-article">
+              <header>
+                <h3 class="case-study__item-header">
+                  <svg xmlns="http://www.w3.org/2000/svg">
+                    <text x="0" y="1em">Case</text>
+                  </svg>
+                  <span>study</span>
+                </h3>
+
+                <div class="case-study__item-position">rôle</div>
+              </header>
+              <img
+                class="case-study__item-img"
+                src="./assets/imgs/Case-study.png"
+                alt="case-study"
+              />
+            </article>
+          </li>
+        </ol>
       </section>
     </main>
   </body>
