change text formatage

--- a/src/index.html
+++ b/src/index.html
@@ -55,7 +55,7 @@
             <a class="navigation__link" href="#">Case study</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="#">Blog</a>
+            <a class="navigation__link" href="./blog-item.html">Blog</a>
           </li>
           <li class="navigation__item">
             <a class="navigation__link" href="#">Contact</a>
@@ -73,7 +73,7 @@
             <a class="navigation__link" href="#">Case study</a>
           </li>
           <li class="navigation__item">
-            <a class="navigation__link" href="#">Blog</a>
+            <a class="navigation__link" href="./blog-item.html">Blog</a>
           </li>
           <li class="navigation__item">
             <a class="navigation__link" href="#">Contact</a>
