--- a/src/blog-item.html
+++ b/src/blog-item.html
@@ -13,7 +13,7 @@
         <title>Jean-Baptiste Stephan Creative developer</title>
     </head>
     <body>
-        <div class="blogging__container">
+        <div class="body__container">
             <header class="">
                 <div class="navigation navigation--mobile">
                     <input class="navigation__checkbox" type="checkbox" name="nav-toggle" id="nav-toggle" />
@@ -58,8 +58,8 @@
                         </nav>
                     </div> -->
             </header>
-            <main class="blogging__content">
-                <div class="blogging__searchbar">
+            <main class="single-blog__content">
+                <div class="searchbar">
                     <div class="row">
                         <div class="input-wrapper">
                             <label for="searchbar">
@@ -212,26 +212,29 @@
                         </ul>
                     </div>
                 </div>
-                <h1 class="blogging__title title-blog">Blog</h1>
-                <div class="blogging__text">
-                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lorem euismod id interdum vivamus viverra commodo quis ut. Egestas amet, orci sem sem neque a, quisque sagittis. Dictum a etiam at semper tempor convallis suspendisse aliquet metus. Scelerisque porttitor placerat egestas mollis mauris at in sollicitudin eleifend.
+                <h1 class="single-blog__title title-blog">Blog</h1>
+                <div class="single-blog__text">
+                    Lorem ipsum dolor sit amet, consectetur adipiscing elit. Quisque lorem euismod id interdum vivamus
+                    viverra commodo quis ut. Egestas amet, orci sem sem neque a, quisque sagittis. Dictum a etiam at
+                    semper tempor convallis suspendisse aliquet metus. Scelerisque porttitor placerat egestas mollis
+                    mauris at in sollicitudin eleifend.
                 </div>
-                <aside class="blogging__metadata">
+                <aside class="single-blog__metadata">
                     <figure>
                         <img src="./assets/imgs/miam1.png" alt="" />
                         <figcaption>Paste fraiche au pesto</figcaption>
                     </figure>
 
-                    <details class="blogging__metadata-list">
+                    <details class="single-blog__metadata-list">
                         <summary>Sommaire</summary>
-                        <ol class="blogging__metadata-list--primary">
+                        <ol class="single-blog__metadata-list--primary">
                             <li><span>Etape 1</span></li>
-                            <li><span>Etape 2</span>
-                                <ol class="blogging__metadata-list--secondary">
+                            <li>
+                                <span>Etape 2</span>
+                                <ol class="single-blog__metadata-list--secondary">
                                     <li>2.1</li>
                                 </ol>
                             </li>
-                            
                         </ol>
                     </details>
                 </aside>
